// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defineConfig > basic set 1`] = `
{
  "logLevel": "info",
  "plugins": [
    {
      "log": LogLevel {
        "currentLevel": 2,
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "log": [Function],
        "methodFactory": LogFactory {
          "options": {
            "level": [Function],
            "name": [Function],
            "ready": {
              "promise": Promise {},
              "reject": [Function],
              "resolve": [Function],
            },
            "template": "[{{time}}] jsx-email ∵ root/minify {{level}} ",
            "time": [Function],
            "transports": undefined,
          },
          "ready": {
            "promise": Promise {},
            "reject": [Function],
            "resolve": [Function],
          },
          "transports": [],
          Symbol(log-instance): [Circular],
          Symbol(log-levels): {
            "DEBUG": 1,
            "ERROR": 4,
            "INFO": 2,
            "SILENT": 5,
            "TRACE": 0,
            "WARN": 3,
          },
        },
        "name": "dot-log:∵ root/minify",
        "options": {
          "factory": LogFactory {
            "options": {
              "level": [Function],
              "name": [Function],
              "ready": {
                "promise": Promise {},
                "reject": [Function],
                "resolve": [Function],
              },
              "template": "[{{time}}] jsx-email ∵ root/minify {{level}} ",
              "time": [Function],
              "transports": undefined,
            },
            "ready": {
              "promise": Promise {},
              "reject": [Function],
              "resolve": [Function],
            },
            "transports": [],
            Symbol(log-instance): [Circular],
            Symbol(log-levels): {
              "DEBUG": 1,
              "ERROR": 4,
              "INFO": 2,
              "SILENT": 5,
              "TRACE": 0,
              "WARN": 3,
            },
          },
          "id": "dot-log:∵ root/minify",
          "level": "info",
          "name": "dot-log:∵ root/minify",
          "prefix": undefined,
        },
        "trace": [Function],
        "type": "LogLevel",
        "warn": [Function],
      },
      "name": "root/minify",
      "process": [Function],
      "symbol": Symbol(jsx-email/plugin),
    },
  ],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": true,
    "plainText": false,
    "pretty": false,
  },
  "symbol": Symbol(jsx-email/config),
}
`;

exports[`defineConfig > de-dupe plugins 1`] = `
{
  "logLevel": "info",
  "plugins": [
    {
      "log": LogLevel {
        "currentLevel": 2,
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "log": [Function],
        "methodFactory": LogFactory {
          "options": {
            "level": [Function],
            "name": [Function],
            "ready": {
              "promise": Promise {},
              "reject": [Function],
              "resolve": [Function],
            },
            "template": "[{{time}}] jsx-email ∵ batman {{level}} ",
            "time": [Function],
            "transports": undefined,
          },
          "ready": {
            "promise": Promise {},
            "reject": [Function],
            "resolve": [Function],
          },
          "transports": [],
          Symbol(log-instance): [Circular],
          Symbol(log-levels): {
            "DEBUG": 1,
            "ERROR": 4,
            "INFO": 2,
            "SILENT": 5,
            "TRACE": 0,
            "WARN": 3,
          },
        },
        "name": "dot-log:∵ batman",
        "options": {
          "factory": LogFactory {
            "options": {
              "level": [Function],
              "name": [Function],
              "ready": {
                "promise": Promise {},
                "reject": [Function],
                "resolve": [Function],
              },
              "template": "[{{time}}] jsx-email ∵ batman {{level}} ",
              "time": [Function],
              "transports": undefined,
            },
            "ready": {
              "promise": Promise {},
              "reject": [Function],
              "resolve": [Function],
            },
            "transports": [],
            Symbol(log-instance): [Circular],
            Symbol(log-levels): {
              "DEBUG": 1,
              "ERROR": 4,
              "INFO": 2,
              "SILENT": 5,
              "TRACE": 0,
              "WARN": 3,
            },
          },
          "id": "dot-log:∵ batman",
          "level": "info",
          "name": "dot-log:∵ batman",
          "prefix": undefined,
        },
        "trace": [Function],
        "type": "LogLevel",
        "warn": [Function],
      },
      "name": "batman",
      "symbol": Symbol(jsx-email/plugin),
    },
  ],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": false,
    "plainText": false,
    "pretty": false,
  },
  "symbol": Symbol(jsx-email/config),
}
`;

exports[`defineConfig > defaults 1`] = `
{
  "logLevel": "info",
  "plugins": [],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": false,
    "plainText": false,
    "pretty": false,
  },
  "symbol": Symbol(jsx-email/config),
}
`;

exports[`defineConfig > minify and pretty 1`] = `
{
  "logLevel": "info",
  "plugins": [
    {
      "log": LogLevel {
        "currentLevel": 2,
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "log": [Function],
        "methodFactory": LogFactory {
          "options": {
            "level": [Function],
            "name": [Function],
            "ready": {
              "promise": Promise {},
              "reject": [Function],
              "resolve": [Function],
            },
            "template": "[{{time}}] jsx-email ∵ root/minify {{level}} ",
            "time": [Function],
            "transports": undefined,
          },
          "ready": {
            "promise": Promise {},
            "reject": [Function],
            "resolve": [Function],
          },
          "transports": [],
          Symbol(log-instance): [Circular],
          Symbol(log-levels): {
            "DEBUG": 1,
            "ERROR": 4,
            "INFO": 2,
            "SILENT": 5,
            "TRACE": 0,
            "WARN": 3,
          },
        },
        "name": "dot-log:∵ root/minify",
        "options": {
          "factory": LogFactory {
            "options": {
              "level": [Function],
              "name": [Function],
              "ready": {
                "promise": Promise {},
                "reject": [Function],
                "resolve": [Function],
              },
              "template": "[{{time}}] jsx-email ∵ root/minify {{level}} ",
              "time": [Function],
              "transports": undefined,
            },
            "ready": {
              "promise": Promise {},
              "reject": [Function],
              "resolve": [Function],
            },
            "transports": [],
            Symbol(log-instance): [Circular],
            Symbol(log-levels): {
              "DEBUG": 1,
              "ERROR": 4,
              "INFO": 2,
              "SILENT": 5,
              "TRACE": 0,
              "WARN": 3,
            },
          },
          "id": "dot-log:∵ root/minify",
          "level": "info",
          "name": "dot-log:∵ root/minify",
          "prefix": undefined,
        },
        "trace": [Function],
        "type": "LogLevel",
        "warn": [Function],
      },
      "name": "root/minify",
      "process": [Function],
      "symbol": Symbol(jsx-email/plugin),
    },
    {
      "afterRender": [Function],
      "log": LogLevel {
        "currentLevel": 2,
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "log": [Function],
        "methodFactory": LogFactory {
          "options": {
            "level": [Function],
            "name": [Function],
            "ready": {
              "promise": Promise {},
              "reject": [Function],
              "resolve": [Function],
            },
            "template": "[{{time}}] jsx-email ∵ root/pretty {{level}} ",
            "time": [Function],
            "transports": undefined,
          },
          "ready": {
            "promise": Promise {},
            "reject": [Function],
            "resolve": [Function],
          },
          "transports": [],
          Symbol(log-instance): [Circular],
          Symbol(log-levels): {
            "DEBUG": 1,
            "ERROR": 4,
            "INFO": 2,
            "SILENT": 5,
            "TRACE": 0,
            "WARN": 3,
          },
        },
        "name": "dot-log:∵ root/pretty",
        "options": {
          "factory": LogFactory {
            "options": {
              "level": [Function],
              "name": [Function],
              "ready": {
                "promise": Promise {},
                "reject": [Function],
                "resolve": [Function],
              },
              "template": "[{{time}}] jsx-email ∵ root/pretty {{level}} ",
              "time": [Function],
              "transports": undefined,
            },
            "ready": {
              "promise": Promise {},
              "reject": [Function],
              "resolve": [Function],
            },
            "transports": [],
            Symbol(log-instance): [Circular],
            Symbol(log-levels): {
              "DEBUG": 1,
              "ERROR": 4,
              "INFO": 2,
              "SILENT": 5,
              "TRACE": 0,
              "WARN": 3,
            },
          },
          "id": "dot-log:∵ root/pretty",
          "level": "info",
          "name": "dot-log:∵ root/pretty",
          "prefix": undefined,
        },
        "trace": [Function],
        "type": "LogLevel",
        "warn": [Function],
      },
      "name": "root/pretty",
      "symbol": Symbol(jsx-email/plugin),
    },
  ],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": true,
    "plainText": false,
    "pretty": true,
  },
  "symbol": Symbol(jsx-email/config),
}
`;

exports[`defineConfig > plain 1`] = `
{
  "logLevel": "info",
  "plugins": [],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": true,
    "plainText": true,
    "pretty": true,
  },
  "symbol": Symbol(jsx-email/config),
}
`;
